--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "buildCommand": "npm run build",
   "builds": [
     {
       "src": "server.ts",
@@ -12,7 +13,7 @@
       "dest": "server.ts"
     },
     {
-      "src": "/.*",
+      "src": "/(.*)",
       "dest": "server.ts"
     }
   ]
